--- a/.pylintrc
+++ b/.pylintrc
@@ -146,6 +146,7 @@ disable=print-statement,
         fixme,
         broad-except,
         import-outside-toplevel,
+        dangerous-default-value,
         # Fiona's improvements
         E1101
 
@@ -520,7 +521,7 @@ valid-metaclass-classmethod-first-arg=cls
 [DESIGN]
 
 # Maximum number of arguments for function / method.
-max-args=10
+max-args=15
 
 # Maximum number of attributes for a class (see R0902).
 max-attributes=15
