--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -15,7 +15,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install mypy types-PyYAML types-requests
-        pip install -r requirements-linux.txt
+        pip install -r requirements.txt
     - name: Analysing the code with mypy
       run: |
         mypy pymarble/
