--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 url =https://jugit.fz-juelich.de/marble
 author = Steffen Brinckmann, FionaDMello and the pyMARBLE team
-author_email = ["Steffen Brinckmann <sbrinckm@gmail.com>","Fiona Dmello <f.dmello@fz-juelich.de>"]
+author_email = sbrinckm@gmail.com
 description = "Scientific instruments produce proprietary binary data that contains a multitude of primary and metadata. This project aims to create a software that supports the domain scientist in deciphering this data and metadata and supply python scripts that decipher the instrument measurements."
 long_description = file:README_PYPI.md
 long_description_content_type = text/markdown; charset=UTF-8
