--- a/setup.cfg
+++ b/setup.cfg
@@ -60,9 +60,7 @@ disallow_any_generics = true
 disallow_incomplete_defs = true
 disallow_untyped_defs = true
 warn_redundant_casts = true
-warn_unused_ignores = true
-ignore_missing_imports = True
-exclude = pasta_eln/Extractors
+ignore_missing_imports = true
 
 [tool:pytest]
 addopts = -p no:warnings
