--- a/.github/workflows/docbuild.yml
+++ b/.github/workflows/docbuild.yml
@@ -18,11 +18,11 @@ jobs:
       run: |
         git config --global user.email "test@github.land"
         git config --global user.name "GitHub Almighty"
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Set up Python 3.10
-      uses: actions/setup-python@v10.13
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.10
+        python-version: '3.10'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
