--- a/.github/workflows/docbuild.yml
+++ b/.github/workflows/docbuild.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements-devel
+        pip install -r requirements-devel.txt
         pip install .
     - name: Build docs
       # Make makefile-html in docs folder
