Finish connection to documenation

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-url =https://jugit.fz-juelich.de/marble
+url =https://micromechanics.github.io/marble/
 author = Steffen Brinckmann, FionaDMello and the pyMARBLE team
 author_email = sbrinckm@gmail.com
 description = "Scientific instruments produce proprietary binary data that contains a multitude of primary and metadata. This project aims to create a software that supports the domain scientist in deciphering this data and metadata and supply python scripts that decipher the instrument measurements."
@@ -15,14 +15,14 @@ classifiers =
 python_requires = >= 3.7
 # https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
 install_requires =
+    sortedcontainers
     matplotlib
     pandas
-    pyside6
-    qt-material
-    QtAwesome
-    sortedcontainers
     h5py
     prettytable
+    aiohttp
+    pyside6
+    QtAwesome
 packages = find_namespace:
 include_package_data = True
 
