--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,8 +17,7 @@ jobs:
         pip install -r requirements.txt
         pip install -r requirements-devel.txt
     - name: Run coverage
-      run: |
-        python -m coverage run -m pytest tests
+      run: pytest --cov app
     - name: Publish code coverage badge
       run: |
         set -x
