--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -11,13 +11,15 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
+     - name: Install libs
+      run: sudo apt-get install -y libegl1
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-devel.txt
     - name: Run coverage
-      run: pytest --cov app
+      run: python -m coverage run -m pytest tests
     - name: Publish code coverage badge
       run: |
         set -x
