--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,15 +24,16 @@ jobs:
       run: |
         set -x
         total=`python3 -c "import sys, json; print(json.load(sys.stdin)['totals']['percent_covered_display'])" < coverage.json`
-
-        if (( $(echo "$total <= 50" | bc -l) )) ; then
+        if (( $(echo "$total <= 40" | bc -l) )) ; then
           COLOR=red
-        elif (( $(echo "$total > 80" | bc -l) )); then
+        elif (( $(echo "$total > 70" | bc -l) )); then
           COLOR=green
         else
           COLOR=orange
         fi
-
-        curl "https://img.shields.io/badge/coavrege-$total%25-$COLOR" > badge.svg
-        gsutil  -h "Cache-Control: no-cache" cp badge.svg gs://${SOME_BUCKET}/${PROJECT_NAME}/codcov.svg
-        gsutil acl ch -u AllUsers:R gs://${SOME_BUCKET}/${PROJECT_NAME}/codcov.svg
+        curl "https://img.shields.io/badge/coverage-$total%25-$COLOR" > badge.svg
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v3
+      with:
+        name: code coverage badge
+        path: badge.svg
