--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -20,6 +20,10 @@ jobs:
         pip install -r requirements-devel.txt
     - name: Run coverage
       run: python -m coverage run -m pytest tests
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     - name: Publish code coverage badge
       run: |
         set -x
