--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -19,7 +19,8 @@ jobs:
         pip install -r requirements.txt
         pip install -r requirements-devel.txt
     - name: Run coverage
-      run: python -m coverage run -m pytest tests
+      run: |
+        python -m coverage run --source pymarble -m pytest tests
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
